--- a/views/home.erb
+++ b/views/home.erb
@@ -1,1 +1,7 @@
 <h1>My Diary</h1>
+<div>
+  <form action='/' method='post'>
+    <label for='title' type='text'><p>Your entry title:</p></label>
+    <input type='text' name='title'>
+  </form>
+</div>
