confirmation when user submits entry

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,10 +1,2 @@
 <h1>My Diary</h1>
-<div>
-  <form action='/' method='post'>
-    <label for='title' type='text'><p>Your entry title:</p></label>
-    <input type='text' name='title'>
-    <label for='body' type='text'><p>Your entry body:</p></label>
-    <input type='text' name='body'>
-    <input type='submit' value='Submit'>
-  </form>
-</div>
+<%= erb :entry_form %>
