added button to list entries

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,2 +1,7 @@
 <h1>My Diary</h1>
 <%= erb :entry_form %>
+<div>
+  <form action='/list_entries' method='get'>
+    <input type='submit' value='View all entries'>
+  </form>
+</div>
