--- a/views/home.erb
+++ b/views/home.erb
@@ -1,7 +1,7 @@
-<h1>My Diary</h1>
+<%= erb :header %>
 <%= erb :entry_form %>
 <div>
-  <form action='/list_entries' method='get'>
+  <form action='/all_entries' method='get'>
     <input type='submit' value='View all entries'>
   </form>
 </div>
