wrapped database info in diary objects

--- a/views/all_entries.erb
+++ b/views/all_entries.erb
@@ -1,5 +1,5 @@
 <%= erb :header %>
 <% @list.each do |entry| %>
-  <li><%= entry %></li><br>
+  <li><%= entry.title %></li><br>
 <% end %>
 <%= erb :home_button %>
