--- a/views/header.erb
+++ b/views/header.erb
@@ -1,1 +1,6 @@
-<h1>My Diary</h1>
+<head>
+  <link rel="stylesheet" type="text/css" href="/styles.css"/>
+</head>
+<section>
+  <h1>My Diary</h1>
+</section>
