renamed all_entries to entries

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,7 +1,7 @@
 <%= erb :header %>
 <%= erb :entry_form %>
 <div>
-  <form action='/all_entries' method='get'>
+  <form action='/entries' method='get'>
     <input type='submit' value='View all entries'>
   </form>
 </div>
