--- a/views/entries.erb
+++ b/views/entries.erb
@@ -1,6 +1,6 @@
 <%= erb :header %>
 <% @list.each do |entry| %>
-  <form action='/all_entries' method='post'>
+  <form action='/entries' method='post'>
     <button class="button_link" type='submit' name='id' value='<%= entry.id %>'>
       <%= entry.title %>
     </button><br>
