--- a/views/invalid_entry.erb
+++ b/views/invalid_entry.erb
@@ -1,7 +1,7 @@
 <%= erb :header %>
 <%= erb :entry_form %>
 <div>
-  <form action='/all_entries' method='get'>
+  <form action='/entries' method='get'>
     <input type='submit' value='View all entries'>
   </form>
 </div>
