--- a/views/delete_confirm.erb
+++ b/views/delete_confirm.erb
@@ -2,7 +2,8 @@
 <h3><%= @entry.title %></h3>
 <p><%= @entry.body %></p>
 <h3><i>Are you sure you want to delete this entry?</i></h3>
-<form action='/entry/delete/confirm' method='post'>
+<form action='/entries/<%= @entry.id %>/delete' method='post'>
+  <input type='hidden' name='_method' value='DELETE'>
   <button type='submit' name='id' value='<%= @entry.id %>'>Confirm</button>
 </form>
 <form action='/entries/<%= @entry.id %>' method='get'>
