--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,6 +1,7 @@
 <%= erb :header %>
 <h3><%= @entry.title %></h3>
-<form action='/entry/edit' method='post'>
+<form action='/entries/<%= @entry.id %>/edit' method='post'>
+  <input type='hidden' name='_method' value='PATCH'>
   <input class='body_entry' type='text' name='body' value='<%= @entry.body %>'/>
   <button type='submit' name='id' value='<%= @entry.id %>'>Update</button>
 </form>
