added some more css

--- a/views/entry_form.erb
+++ b/views/entry_form.erb
@@ -3,7 +3,7 @@
     <label for='title' type='text'><p>Your entry title:</p></label>
     <input type='text' name='title'>
     <label for='body' type='text'><p>Your entry body:</p></label>
-    <textarea class='body_entry' type='text' name='body'></textarea>
+    <textarea class='body_entry' type='text' name='body'></textarea><br><br>
     <input type='submit' value='Submit'>
   </form>
 </div>
