--- a/views/header.erb
+++ b/views/header.erb
@@ -1,6 +1,7 @@
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Merienda" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/styles.css"/>
 </head>
-<section>
+<section class="header">
   <h1>My Diary</h1>
 </section>
