--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,7 @@
+body {
+  text-align: center;
+  font-family: helvetica;
+}
 .button_link {
   border:none;
   outline:none;
@@ -12,4 +16,9 @@
 .body_entry {
   width: 50%;
   height: 30%;
+}
+.header {
+  font-family: 'Merienda', cursive;
+  text-align: center;
+  font-size: 32px;
 }
