--- a/views/entry.erb
+++ b/views/entry.erb
@@ -1,10 +1,12 @@
 <%= erb :header %>
 <h3><%= @entry.title %></h3>
 <p><%= @entry.body %></p>
+<section>
 <form action='/entries/<%= @entry.id %>/edit' method='get'>
   <button type='submit' name='id' value='<%= @entry.id %>'>Edit</button>
 </form>
 <form action='/entries/<%= @entry.id %>/delete' method='get'>
   <button type='submit' name='id' value='<%= @entry.id %>'>Delete</button>
 </form>
+</section>
 <%= erb :home_button %>
